# slam-learning

./: CMakeLists.txt  README.md
config/: slam.yaml
data/: associate.txt
include/: backend_optimization.h  camera.h  config.h  frame.h  map.h  mappoint.h  visual_obometry.h
include/beop/: BALProblem.h  BundleParams.h
include/common/: common.h  projection.h
include/flags/: command_args.h
include/g2o/: g2o_types.h
include/tools/: random.h  rotation.h
lib/: libslam.dylib
output/: final.ply
src/: CMakeLists.txt  backend_optimization.cpp  camera.cpp  config.cpp  frame.cpp  g2o_types.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
src/beop/: BALProblem.cpp
src/flags/: command_args.cpp
src/g2o/: g2o_types.cpp
test/: CMakeLists.txt  run_be.cpp  run_vo.cpp
